spacing fixed on size choices

--- a/spiderstyles.css
+++ b/spiderstyles.css
@@ -83,6 +83,11 @@ button {
 .size {
     display: flex;
     font-size: 20px;
+    padding-left: 15.5%;
+}
+
+#personal, #medium, #large, #extra {
+    margin-right: 10%;
 }
 
 .crust_container, .sauce_container, .cheese_container {
